@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>[4.4,4.7]</version>
+			<version>4.7</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
